--- a/.github/workflows/sync_all_branches_same_repo.yml
+++ b/.github/workflows/sync_all_branches_same_repo.yml
@@ -18,4 +18,6 @@ jobs:
         eval "$(ssh-agent -s)"
         ssh-add - <<< "${DEPLOY_KEY}"
     - name: Sync all branches
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: scripts/sync_all_branches_with_master.sh
