--- a/.github/workflows/sync_all_branches_same_repo.yml
+++ b/.github/workflows/sync_all_branches_same_repo.yml
@@ -11,6 +11,8 @@ jobs:
       uses: actions/checkout@v1
       with:
         fetch-depth: 2147483647
+    - name: Check remote
+      run: git remote -v
     - name: Setup github ssh-key
       env:
         DEPLOY_KEY: ${{ secrets.DEPLOY_KEY }}
