--- a/.github/workflows/merge_branches_with_remote_repo.yml
+++ b/.github/workflows/merge_branches_with_remote_repo.yml
@@ -1,4 +1,4 @@
-name: Sync all branches with master branch in same repository
+name: Sync master branch in remote repositories with local branches
 on:
   push:
     branches:
